--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
           <div class="collapse navbar-collapse text-center" id="navbarCollapse">
             <ul class="nav nav-pills mb-3 navbar-nav">
                           <li class="nav-item"><a class="nav-link active" href="/"><i class="fas fa-home"></i></a></li>
-                          <li class="nav-item"><a class="nav-link" href="./social.html">Социум<i></i></a></li>
-                          <li class="nav-item"><a class="nav-link" href="./news.html">Новости<i></i></a></li>
-                          <li class="nav-item"><a class="nav-link" href="./media.html">Медиа<i></i></a></li>
-                          <li class="nav-item"><a class="nav-link" href="./games.html">Игры<i></i></a></li>
+                          <li class="nav-item"><a class="nav-link" href="./social.html">Соціум<i></i></a></li>
+                          <li class="nav-item"><a class="nav-link" href="./news.html">Новини<i></i></a></li>
+                          <li class="nav-item"><a class="nav-link" href="./media.html">Медіа<i></i></a></li>
+                          <li class="nav-item"><a class="nav-link" href="./games.html">Ігри<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./communal.html">Комуналка<i></i></a></li>
-                          <li class="nav-item"><a class="nav-link" href="./bank.html">Банкинг<i></i></a></li>
-                          <li class="nav-item"><a class="nav-link" href="./market.html">Рынок<i></i></a></li>
-                          <li class="nav-item"><a class="nav-link" href="./shops.html">Магазины<i></i></a></li>
-                          <li class="nav-item"><a class="nav-link" href="./others.html">Другое<i></i></a></li>
+                          <li class="nav-item"><a class="nav-link" href="./bank.html">Банкінг<i></i></a></li>
+                          <li class="nav-item"><a class="nav-link" href="./market.html">Ринок<i></i></a></li>
+                          <li class="nav-item"><a class="nav-link" href="./shops.html">Магазини<i></i></a></li>
+                          <li class="nav-item"><a class="nav-link" href="./others.html">Інше<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./city.html">Городок<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./programs.html"><i class="fas fa-microchip"></i></a></li>
             </ul>
@@ -74,10 +74,10 @@
           <div class="row animated fadeIn">
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><a href="/others.html"><span class="badge badge-dark">Поиск/Перевод/Граматика</span></a></div>
+                <div class="group-title"><a href="/others.html"><span class="badge badge-dark">Пошук/Перекладач/Граматика</span></a></div>
                 <ul>
                   <li>
-                    <div class="google icon"></div><a href="https://www.google.com.ua/" target="_blank">Поиск Google</a>
+                    <div class="google icon"></div><a href="https://www.google.com.ua/" target="_blank">Пошук Google</a>
                   </li>
                   <!--li
                   div.yandex.icon
@@ -85,10 +85,10 @@
                   div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
                   -->
                   <li>
-                    <div class="icon translate google com ua"></div><a href="https://translate.google.com.ua/" target="_blank">Переводчик Google</a>
+                    <div class="icon translate google com ua"></div><a href="https://translate.google.com.ua/" target="_blank">Перекладач Google</a>
                   </li>
                   <li>
-                    <div class="icon translate ru"></div><a href="https://www.translate.ru/" target="_blank">Переводчик PROMT</a>
+                    <div class="icon translate ru"></div><a href="https://www.translate.ru/" target="_blank">Перекладач PROMT</a>
                   </li>
                   <li>
                     <div class="icon languagetool org"></div><a href="https://languagetool.org/uk/" target="_blank">Граматика от languagetool</a>
@@ -96,7 +96,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><a href="/social.html"><span class="badge badge-dark">Социум</span></a></div>
+                <div class="group-title"><a href="/social.html"><span class="badge badge-dark">Соціум</span></a></div>
                 <ul>
                   <li>
                     <div class="icon facebook com"></div><a href="https://www.facebook.com/" target="_blank">Facebook.com</a>
@@ -118,22 +118,22 @@
                   div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
                   -->
                   <li>
-                    <div class="icon gmail"></div><a href="https://mail.google.com" target="_blank">почта_gmail</a>
+                    <div class="icon gmail"></div><a href="https://mail.google.com" target="_blank">пошта_gmail</a>
                   </li>
                   <li>
-                    <div class="icon mail ukr net"></div><a href="https://accounts.ukr.net/login" target="_blank">почта_ukr.net</a>
+                    <div class="icon mail ukr net"></div><a href="https://accounts.ukr.net/login" target="_blank">пошта_ukr.net</a>
                   </li>
                   <li>
-                    <div class="icon webmail meta ua"></div><a href="https://webmail.meta.ua/" target="_blank">почта_meta.ua</a>
+                    <div class="icon webmail meta ua"></div><a href="https://webmail.meta.ua/" target="_blank">пошта_meta.ua</a>
                   </li>
                   <li>
-                    <div class="icon e mail ru"></div><a href="https://e.mail.ru/login" target="_blank">почта_mail.ru</a>
+                    <div class="icon e mail ru"></div><a href="https://e.mail.ru/login" target="_blank">пошта_mail.ru</a>
                     <div class="icontoo a0VPN1" title="Для работы нужен VPN" alt=""></div>
                   </li>
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><a href="/news.html"><span class="badge badge-dark">Новости</span></a></div>
+                <div class="group-title"><a href="/news.html"><span class="badge badge-dark">Новини</span></a></div>
                 <ul>
                   <li>
                     <div class="icon ukr net"></div><a href="https://www.ukr.net/" target="_blank">Ukr.net</a>
@@ -153,7 +153,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><a href="/media.html"><span class="badge badge-dark">Медиа</span></a></div>
+                <div class="group-title"><a href="/media.html"><span class="badge badge-dark">Медіа</span></a></div>
                 <ul>
                   <li>
                     <div class="icon youtube"></div><a href="https://www.youtube.com/" target="_blank">Youtube</a>
@@ -183,7 +183,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><a href="/games.html"><span class="badge badge-dark">Игры</span></a></div>
+                <div class="group-title"><a href="/games.html"><span class="badge badge-dark">Ігри</span></a></div>
                 <ul>
                   <li>
                     <div class="icon playset ru"></div><a href="http://www.playset.ru/" target="_blank">playset.ru</a>
@@ -206,7 +206,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><a href="/games.html"><span class="badge badge-dark">Игры/Букмек.конторы</span></a></div>
+                <div class="group-title"><a href="/games.html"><span class="badge badge-dark">Ігри/Букмек.контори</span></a></div>
                 <ul>
                   <li>
                     <div class="icon parimatch com"></div><a href="https://air.parimatch.com/ru/" target="_blank">air.parimatch.com`</a>
@@ -223,16 +223,16 @@
                 <div class="group-title"><a href="/communal.html"><span class="badge badge-dark">Комуналка</span></a></div>
                 <ul>
                   <li>
-                    <div class="icon minfin com ua"></div><a href="https://index.minfin.com.ua/tariff/gas/" target="_blank">minfin.com</a><span class="opisi">оф.цена.газ</span>
+                    <div class="icon minfin com ua"></div><a href="https://index.minfin.com.ua/tariff/gas/" target="_blank">minfin.com</a><span class="opisi">оф.ціна.газ</span>
                   </li>
                   <li>
-                    <div class="icon naftogazpostach com"></div><a href="https://gas.ua/" target="_blank">naftogaz</a><span class="opisi">Кабин.Газ.2019</span>
+                    <div class="icon naftogazpostach com"></div><a href="https://gas.ua/" target="_blank">naftogaz</a><span class="opisi">Кабін.Газ.2019</span>
                   </li>
                   <li>
                     <div class="icon gasolina-online com"></div><a href="https://gasolina-online.com/" target="_blank">gasolina</a><span class="opisi">Каб.Газ.(доставка)</span>
                   </li>
                   <li>
-                    <div class="icon minfin com ua"></div><a href="https://index.minfin.com.ua/tariff/electric/" target="_blank">minfin.com</a><span class="opisi">оф.цена.электр.</span>
+                    <div class="icon minfin com ua"></div><a href="https://index.minfin.com.ua/tariff/electric/" target="_blank">minfin.com</a><span class="opisi">оф.ціна.електр.</span>
                   </li>
                   <li>
                     <div class="icon kresc com ua"></div><a href="https://www.kresc.com.ua/" target="_blank">kresc.com.ua</a><span class="opisi">КОЕК</span><a href="https://youtu.be/qIJYbNR_l6g" target="_blank">
@@ -244,7 +244,7 @@
                       <div class="icontooinfo a0youtubeinform" title="Відеоінструкція. Процес реєстрації та огляд особистого кабінету на офіційному сайті компанії ТОВ Кіровоградська обласна ЕК" alt=""></div></a>
                   </li>
                   <li>
-                    <div class="icon ukrtelecom ua"></div><a href="https://ukrtelecom.ua/" target="_blank">ukrtelecom</a><span class="opisi">СЧЕТ/ТАРИФЫ</span><a href="https://youtu.be/WYhA_JFRVik" target="_blank">
+                    <div class="icon ukrtelecom ua"></div><a href="https://ukrtelecom.ua/" target="_blank">ukrtelecom</a><span class="opisi">Оплата</span><a href="https://youtu.be/WYhA_JFRVik" target="_blank">
                       <div class="icontooinfo a0youtubeinform" title="Видеоинструкция. Как узнать суму задолженности и ее оплатить" alt=""></div></a>
                   </li>
                   <li>
@@ -268,7 +268,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><a href="/bank.html"><span class="badge badge-dark">Банкинг</span></a></div>
+                <div class="group-title"><a href="/bank.html"><span class="badge badge-dark">Банкінг</span></a></div>
                 <ul>
                   <li>
                     <div class="icon privat24 ua"></div><a href="https://www.privat24.ua/" target="_blank">privat24.ua</a><span class="opisi">Онлайн</span>
@@ -280,16 +280,16 @@
                     <div class="icon online aval ua"></div><a href="https://online.aval.ua/ibank/home?0" target="_blank">online.aval.ua</a><span class="opisi">Онлайн</span>
                   </li>
                   <li>
-                    <div class="icon payoneer com"></div><a href="https://www.payoneer.com/" target="_blank">payoneer</a><span class="opisi">Интерн.кошелек</span>
+                    <div class="icon payoneer com"></div><a href="https://www.payoneer.com/" target="_blank">payoneer</a><span class="opisi">Інтерн.гаманець</span>
                   </li>
                   <li>
-                    <div class="icon payeer com"></div><a href="https://payeer.com/?partner=1687223" target="_blank">payeer`</a><span class="opisi">Интерн.кошелек</span>
+                    <div class="icon payeer com"></div><a href="https://payeer.com/?partner=1687223" target="_blank">payeer`</a><span class="opisi">Інтерн.гаманець</span>
                   </li>
                   <li>
                     <div class="icon minfin com ua"></div><a href="https://minfin.com.ua/currency/" target="_blank">minfin.com.ua</a><span class="opisi">Курс валют</span>
                   </li>
                   <li>
-                    <div class="icon bestchange ru"></div><a href="https://www.bestchange.ru/" target="_blank">bestchange.ru</a><span class="opisi">Обмен валют</span>
+                    <div class="icon bestchange ru"></div><a href="https://www.bestchange.ru/" target="_blank">bestchange.ru</a><span class="opisi">Обмін валют</span>
                   </li>
                   <!-- тут реклама от ГУГЛ-->
                   <!-- тут реклама от ГУГЛ-->
@@ -298,7 +298,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><a href="/market.html"><span class="badge badge-dark">Отследить посылку</span></a></div>
+                <div class="group-title"><a href="/market.html"><span class="badge badge-dark">Відслідкувати посилку</span></a></div>
                 <ul>
                   <li>
                     <div class="icon novaposhta ua"></div><a href="https://novaposhta.ua/ru/tracking" target="_blank">novaposhta.ua</a>
@@ -309,7 +309,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><a href="/market.html"><span class="badge badge-dark">Рынок</span></a></div>
+                <div class="group-title"><a href="/market.html"><span class="badge badge-dark">Ринок</span></a></div>
                 <ul>
                   <li>
                     <div class="icon olx ua"></div><a href="https://www.olx.ua/" target="_blank">olx.ua</a>
@@ -329,7 +329,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><a href="/shops.html"><span class="badge badge-dark">Магазины</span></a></div>
+                <div class="group-title"><a href="/shops.html"><span class="badge badge-dark">Магазини</span></a></div>
                 <ul>
                   <li>
                     <div class="icon letyshops com"></div><a href="https://letyshops.com/ua/soc/sh-1?r=2739789" target="_blank">Letyshops`</a><span class="opisi">Все дешевле</span>
@@ -371,7 +371,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><a href="/others.html"><span class="badge badge-dark">Другое</span></a></div>
+                <div class="group-title"><a href="/others.html"><span class="badge badge-dark">Інше</span></a></div>
                 <ul>
                   <li>
                     <div class="icon speed2"></div><a href="http://speedtest.ukrtelecom.ua/" target="_blank">speedtest.ukrtelecom.ua</a>
@@ -393,13 +393,13 @@
                     <div class="icon rutor info"></div><a href="http://rutor.info/" target="_blank">rutor.info</a>
                   </li>
                   <li>
-                    <div class="icon bible-teka com"></div><a href="https://bible-teka.com/synodal/" target="_blank">bible-teka</a><span class="opisi">Библия онлайн</span>
+                    <div class="icon bible-teka com"></div><a href="https://bible-teka.com/synodal/" target="_blank">bible-teka</a><span class="opisi">Біблія онлайн</span>
                   </li>
                   <li>
                     <div class="icon slovohrista org"></div><a href="http://slovohrista.org/" target="_blank">slovohrista.org</a>
                   </li>
                   <li>
-                    <div class="icon vshkole com"></div><a href="https://vshkole.com/" target="_blank">vshkole</a><span class="opisi">ГДЗ/учебники</span>
+                    <div class="icon vshkole com"></div><a href="https://vshkole.com/" target="_blank">vshkole</a><span class="opisi">ГДЗ/підручники</span>
                   </li>
                   <!-- тут реклама от ГУГЛ-->
                   <!-- тут реклама от ГУГЛ-->
@@ -431,7 +431,7 @@
                     <div class="icon meteoprog"></div><a href="https://www.meteoprog.ua/ru/review/Novomirgorod/" target="_blank">Погода_Meteoprog</a>
                   </li>
                   <li>
-                    <div class="icon vk com"></div><a href="https://vk.com/novomyrhorod_baraholka" target="_blank">рынок.БАРАХОЛКА</a>
+                    <div class="icon vk com"></div><a href="https://vk.com/novomyrhorod_baraholka" target="_blank">ринок.БАРАХОЛКА</a>
                     <div class="icontoo a0VPN1" title="Для работы нужен VPN" alt=""></div>
                   </li>
                   <li>
@@ -467,7 +467,7 @@
                     <div class="icontooinfo a0repa3" title="Repka.UA - Лучший сервис и условия доставки по всей Украине. Ноутбуки Смартфоны Бытовая техника Наручные часы Товары для отдыха" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://covid19.who.int/" target="_blank">Карта коронавируса MIR</a>
+                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://covid19.who.int/" target="_blank">Карта коронавіруса MIR</a>
                     <div class="icontooinfo a0repa3" title="Вся статистика по коронавирусу, по всей земле" alt=""></div>
                   </li>
                   <li>
@@ -483,7 +483,7 @@
                     <div class="icontooinfo a0repa3" title="Как быстро настроить ZAKLADKI на компьютере, ноутбуке, смартфоне" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon costaction com"></div><a href="http://costaction.com/partner/?PHPSESUD=CEADEE4DA51FAECA3ED6C17C6A9191A5" target="_blank">Хранилище файлов`</a>
+                    <div class="icon costaction com"></div><a href="http://costaction.com/partner/?PHPSESUD=CEADEE4DA51FAECA3ED6C17C6A9191A5" target="_blank">Зберігання файлів`</a>
                     <div class="icontooinfo a0repa3" title="Раздел-Программы. Вы будете получать деньги за каждое скачивание Вашего файла. Просто загрузите файлы на Turbobit.net и Hitfile.net, обменивайтесь ими со своим друзьями, и незнакомцами через блоги, социальные сети, форумы или свои сайты!" alt=""></div>
                   </li>
                   <!-- тут реклама от ГУГЛ-->
