--- a/games.html
+++ b/games.html
@@ -52,15 +52,15 @@
           <div class="collapse navbar-collapse text-center" id="navbarCollapse">
             <ul class="nav nav-pills mb-3 navbar-nav">
                           <li class="nav-item"><a class="nav-link" href="/"><i class="fas fa-home"></i></a></li>
-                          <li class="nav-item"><a class="nav-link" href="./social.html">Социум<i></i></a></li>
-                          <li class="nav-item"><a class="nav-link" href="./news.html">Новости<i></i></a></li>
-                          <li class="nav-item"><a class="nav-link" href="./media.html">Медиа<i></i></a></li>
-                          <li class="nav-item"><a class="nav-link active" href="./games.html">Игры<i></i></a></li>
+                          <li class="nav-item"><a class="nav-link" href="./social.html">Соціум<i></i></a></li>
+                          <li class="nav-item"><a class="nav-link" href="./news.html">Новини<i></i></a></li>
+                          <li class="nav-item"><a class="nav-link" href="./media.html">Медіа<i></i></a></li>
+                          <li class="nav-item"><a class="nav-link" href="./games.html">Ігри<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./communal.html">Комуналка<i></i></a></li>
-                          <li class="nav-item"><a class="nav-link" href="./bank.html">Банкинг<i></i></a></li>
-                          <li class="nav-item"><a class="nav-link" href="./market.html">Рынок<i></i></a></li>
-                          <li class="nav-item"><a class="nav-link" href="./shops.html">Магазины<i></i></a></li>
-                          <li class="nav-item"><a class="nav-link" href="./others.html">Другое<i></i></a></li>
+                          <li class="nav-item"><a class="nav-link" href="./bank.html">Банкінг<i></i></a></li>
+                          <li class="nav-item"><a class="nav-link" href="./market.html">Ринок<i></i></a></li>
+                          <li class="nav-item"><a class="nav-link" href="./shops.html">Магазини<i></i></a></li>
+                          <li class="nav-item"><a class="nav-link" href="./others.html">Інше<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./city.html">Городок<i></i></a></li>
                           <li class="nav-item"><a class="nav-link" href="./programs.html"><i class="fas fa-microchip"></i></a></li>
             </ul>
