--- a/market.html
+++ b/market.html
@@ -200,7 +200,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm footer-col">
-            <div class="kolobok"><a class="btn btn-primary btn-sm" href="https://docs.google.com/document/d/15VLtvFvXNxhkXU_ZH74387e289Rx6If2Zmrp4m8KFAc" title="Переслать немного денег на содержание сайта (заранее СПАСИБО Всем кто перекинет деньжат)" role="button" target="_blank">Поддержать сайт</a></div>
+            <div class="kolobok"><a class="btn btn-primary btn-sm" href="https://docs.google.com/document/d/15VLtvFvXNxhkXU_ZH74387e289Rx6If2Zmrp4m8KFAc" title="Переслати кошти на утримання сайта (зарані ДЯКУЄМО Всім хто перекине грошенят)" role="button" target="_blank">Підтримати сайт</a></div>
           </div>
           <div class="col-sm footer-col">
             <div class="kolobok">
@@ -219,7 +219,7 @@
             </div>
           </div>
           <div class="col-sm footer-col">
-            <div class="kolobok"><a href="skype:webersis?chat" target="_blank" title="SKYPE: webersis"><i class="fab fa-skype fa-lg" aria-hidden="true"></i></a><a href="mailto:weber515sis@gmail.com" target="_blank" title="E-mail: weber515sis@gmail.com"><i class="far fa-envelope fa-lg" aria-hidden="true"></i></a><a href="https://t.me/zakladki_top_one" target="_blank" title="Telegram: КАНАЛ в ТЕЛЕГРАМ"><i class="fab fa-telegram fa-lg" aria-hidden="true"></i></a><a href="https://youtu.be/BdZQy6upWFc" target="_blank" title="Видеоинструкция: автозапуск ZAKLADOK"><i class="fas fa-medkit fa-lg coloriconfuter" aria-hidden="true"></i></a></div>
+            <div class="kolobok"><a href="skype:webersis?chat" target="_blank" title="SKYPE: webersis"><i class="fab fa-skype fa-lg" aria-hidden="true"></i></a><a href="mailto:weber515sis@gmail.com" target="_blank" title="E-mail: weber515sis@gmail.com"><i class="far fa-envelope fa-lg" aria-hidden="true"></i></a><a href="https://t.me/zakladki_top_one" target="_blank" title="Telegram: КАНАЛ в ТЕЛЕГРАМ"><i class="fab fa-telegram fa-lg" aria-hidden="true"></i></a><a href="https://youtu.be/BdZQy6upWFc" target="_blank" title="Відеоінструкція: автозапуск ZAKLADOK"><i class="fas fa-medkit fa-lg coloriconfuter" aria-hidden="true"></i></a></div>
           </div>
           <div class="col-sm footer-col">
             <div class="kolobok">
@@ -260,7 +260,7 @@
             </div>
           </div>
           <div class="col-sm footer-col">
-            <div class="kolobok"><a href="https://t.me/zakladki_top" target="_blank">Беседка</a> / <a href="https://t.me/zakladki_top" target="_blank">Задать вопрос</a></div>
+            <div class="kolobok"><a href="https://t.me/zakladki_top" target="_blank">ЧАТ</a> / <a href="https://t.me/zakladki_top" target="_blank">Задати питання</a></div>
           </div>
         </div>
       </div>
