--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
                     <div class="icon sinoptik"></div><a href="https://sinoptik.ua/%D0%BF%D0%BE%D0%B3%D0%BE%D0%B4%D0%B0-%D0%BD%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4" target="_blank">Погода_Sinoptik</a>
                   </li>
                   <li>
-                    <div class="icon rp5 ua"></div><a href="http://rp5.ua/%D0%9F%D0%BE%D0%B3%D0%BE%D0%B4%D0%B0_%D0%B2_%D0%9D%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4%D0%B5" target="_blank">Погода_Rp5.ua</a>
+                    <div class="icon weather com"></div><a href="https://weather.com/uk-UA/weather/hourbyhour/l/UPXX0695:1:UP" target="_blank">Погода_Weather.com</a>
                   </li>
                   <li>
                     <div class="icon meteoprog"></div><a href="https://www.meteoprog.ua/ru/review/Novomirgorod/" target="_blank">Погода_Meteoprog</a>
