--- a/city.html
+++ b/city.html
@@ -25,7 +25,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="WebSIS &amp; Company">
-    <meta name="keywords" content="лучшие сайты, популярные сайты, каталог сайтов, быстрые ссылки, cписок найпопулярніших веб-сайтів, топ сайтів, speeddial, новости, соцсети, видео, погода">
+    <meta name="keywords" content="лучшие сайты, популярные сайты, каталог сайтов, быстрые ссылки, cписок найпопулярніших веб-сайтів, топ сайтів, speeddial, zakladki, новости, соцсети, видео, погода">
     <meta name="description" content="Полный список самых популярных сайтов интернета. Удобный каталог сайтов с сортировкой по тематике. Все топ сайты в одном месте. Все для удобства в интернете.">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <!-- Player-top-->
@@ -89,9 +89,6 @@
                   </li>
                   <li>
                     <div class="icon sinoptik"></div><a href="https://sinoptik.ua/%D0%BF%D0%BE%D0%B3%D0%BE%D0%B4%D0%B0-%D0%BD%D0%BE%D0%B2%D0%BE%D0%BC%D0%B8%D1%80%D0%B3%D0%BE%D1%80%D0%BE%D0%B4" target="_blank">Погода_Sinoptik</a>
-                  </li>
-                  <li>
-                    <div class="icon weather com"></div><a href="https://weather.com/uk-UA/weather/hourbyhour/l/UPXX0695:1:UP" target="_blank">Погода_Weather.com</a>
                   </li>
                   <li>
                     <div class="icon meteoprog"></div><a href="https://www.meteoprog.ua/ru/review/Novomirgorod/" target="_blank">Погода_Meteoprog</a>
