--- a/communal.html
+++ b/communal.html
@@ -115,6 +115,10 @@
                       <div class="icontooinfo a0youtubeinform" title="Відеоінструкція. Процес реєстрації та огляд особистого кабінету на офіційному сайті компанії ТОВ Кіровоградська обласна ЕК" alt=""></div></a>
                   </li>
                   <li>
+                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://ok.kiroe.com.ua/home" target="_blank">Кабінет електро 2022</a>
+                    <div class="icontooinfo a0repa3" title="Особистий кабінет побутового споживача ПрАТ Кіровоградобленерго" alt=""></div>
+                  </li>
+                  <li>
                     <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://koek.billing.city/login" target="_blank">Кабінет електро 2020</a>
                     <div class="icontooinfo a0repa3" title="Огляд листівки від КОЕК" alt=""></div><a href="https://youtu.be/qIJYbNR_l6g" target="_blank">
                       <div class="icontooinfo a0youtubeinform" title="Відеоінструкція. Процес реєстрації та огляд особистого кабінету на офіційному сайті компанії ТОВ Кіровоградська обласна ЕК" alt=""></div></a>
