--- a/index.html
+++ b/index.html
@@ -239,9 +239,8 @@
                       <div class="icontooinfo a0youtubeinform" title="Відеоінструкція. Процес реєстрації та огляд особистого кабінету на офіційному сайті компанії ТОВ Кіровоградська обласна ЕК" alt=""></div></a>
                   </li>
                   <li>
-                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://koek.billing.city/login" target="_blank">Кабінет електро 2020</a>
-                    <div class="icontooinfo a0repa3" title="Огляд листівки від КОЕК" alt=""></div><a href="https://youtu.be/qIJYbNR_l6g" target="_blank">
-                      <div class="icontooinfo a0youtubeinform" title="Відеоінструкція. Процес реєстрації та огляд особистого кабінету на офіційному сайті компанії ТОВ Кіровоградська обласна ЕК" alt=""></div></a>
+                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://ok.kiroe.com.ua/home" target="_blank">Кабінет електро 2022</a>
+                    <div class="icontooinfo a0repa3" title="Особистий кабінет побутового споживача ПрАТ Кіровоградобленерго" alt=""></div>
                   </li>
                   <li>
                     <div class="icon ukrtelecom ua"></div><a href="https://ukrtelecom.ua/" target="_blank">ukrtelecom</a><span class="opisi">Оплата</span><a href="https://youtu.be/WYhA_JFRVik" target="_blank">
